force-app/main/default/objects/Lead/fields/Annual_Books_Sold__c.field-meta.xml
<CustomField>
    <fullName>Annual_Books_Sold__c</fullName>
    <label>Annual Books Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>