force-app/main/default/objects/Lead/fields/Shop_Type__c.field-meta.xml
<CustomField>
    <fullName>Shop_Type__c</fullName>
    <label>Shop Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bookstore</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
            <value>
                <fullName>News Agent</fullName>
            </value>
            <value>
                <fullName>Post Office</fullName>
            </value>
            <value>
                <fullName>Online Bookstore</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>