force-app/main/default/objects/Lead/fields/Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_Group__c</fullName>
    <description>Defines important leads to focus on.</description>
    <formula>AND(Annual_Books_Sold__c &gt; 1000000, Country = &apos;Poland&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Group</label>
    <type>Checkbox</type>
</CustomField>