force-app/main/default/objects/Lead/recordTypes/NonPartner.recordType-meta.xml
<RecordType>
    <fullName>NonPartner</fullName>
    <active>true</active>
    <businessProcess>NonPartner Process</businessProcess>
    <description>Process for all non partner leads.</description>
    <label>NonPartner</label>
</RecordType>