force-app/main/default/objects/Lead/validationRules/Require_Phone_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Phone_or_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Email), ISBLANK(Phone))</errorConditionFormula>
    <errorMessage>Please provide either phone number or email for as contact.</errorMessage>
</ValidationRule>