force-app/main/default/objects/Lead/listViews/Bronze_Lead.listView-meta.xml
<ListView>
    <fullName>Bronze_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Bronze</label>
    <queue>Bronze</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>