force-app/main/default/objects/Lead/listViews/Golden_Lead.listView-meta.xml
<ListView>
    <fullName>Golden_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Golden</label>
    <queue>Golden</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>