force-app/main/default/objects/Lead/listViews/Silver_Lead.listView-meta.xml
<ListView>
    <fullName>Silver_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Silver</label>
    <queue>Silver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>